--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    
     "cruz-task-manager": {
       "projectType": "application",
       "schematics": {
@@ -31,6 +32,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -99,6 +102,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "bootstrap/dist/css/bootstrap.css",
               "src/styles.scss"
             ],
             "scripts": []
