--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,9 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
+  
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "paths": { "@angular/*": [ "../node_modules/@angular/*" ] },
     "outDir": "./out-tsc/app",
     "types": []
   },
@@ -12,4 +14,5 @@
   "include": [
     "src/**/*.d.ts"
   ]
+  
 }
